--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="img/flowers.png" type="image/x-icon" />
-    <title>Flowers</title>
+    <link rel="icon" href="love.png" type="image/x-icon" />
+    <title>gift for youu cintah</title>
   </head>
   <body>
     <div class="greetings">
@@ -27,7 +27,7 @@
       <span>A</span>
     </div>
     <div class="description">
-      <span>Aku punya ada hadiah spesial buat kamuu, diklik yaa sayang</span>
+      <span>Aku punya ada hadiah spesial buat kamuu, diklik yaa sayang...</span>
     </div>
     <div class="button">
       <button>
